--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Présentation</title>
+    <title>ReCreaTech</title>
 </head>
 <body>
-    <h1>Bienvenue</h1>
-    <p>Ceci est ma première page HTML.</p>
+    <iframe src="FlyerReCreaTech.pdf" width="100%" height="600px"></iframe>
 </body>
 </html>
